feat: close chat usecase
